examples/simple/undefined/UB-STRING1-bad.output
Error: UB-STRING1
Description: Null pointer passed to strcpy.
Type: Undefined behavior.
See also: C11 sec. 7.1.4:1, J.2:1 item 108
  at strcpy(UB-STRING1-bad.c:6)
  at main(UB-STRING1-bad.c:6)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
