examples/simple/undefined/UB-STRING1-bad.c
#include<string.h>

int main() {
  char *s1 = 0;
  char *s2 = "foo";
  strcpy(s1, s2);
  return 0;
}
